--- a/.env.local
+++ b/.env.local
@@ -1,7 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb+srv://szymonfularczyk:szymon123@cluster0.9yudj.mongodb.net/twitter-database?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=kOcWVZXHA0iOn5pee6T0YA9BbL/p/bCgFNJzPYzR5Ko=
-NODE_ENV=development
-CLOUDINARY_CLOUD_NAME=drcqwytpi
-CLOUDINARY_API_KEY=459195549652294
-CLOUDINARY_API_SECRET=jex3EOjO_ALWUkG-XyqUm6Ki1y4
+MONGO_URI=
+JWT_SECRET=
+NODE_ENV=
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
